# OrangePiZero3Bot

./: .gitignore  .gitmodules  1.sh  CMakeLists.txt  README.md  udp_viewer.py
calibration_results/: calibration_report.txt  stereo_calibration.yml  默认文件说明.txt
config/: calibration.yaml  camera.yaml  census.yaml  cmake.yaml  inference.yaml  network.yaml  performance.yaml  preprocess.yaml  stereo.yaml  system.yaml
docs/: 代码规范.txt  模块编写规范.txt  移植必读.md
include/calibration/: calibration_loader.hpp  stereo_calibrator.hpp  stereo_rectifier.hpp
include/camera/: camera_factory.h  camera_interface.h  chusei_camera.h  mock_camera.h
include/census/: census_transform.h  filters.h
include/cpu_stereo/: cpu_stereo_matcher.hpp
include/inference/: yolo_detector.h
include/network/: udp_streamer.h
include/preprocess/: census.h  denoiser.h  gpu_bilateral.h  gpu_census.h  preprocess.h
include/utils/: config.hpp  hardware_monitor.h  logger.hpp
models/: YOLO26n_model_int8.onnx
src/: main.cpp  test.cpp
src/calibration/: CMakeLists.txt  calibration_loader.cpp  stereo_calibrator.cpp  stereo_calibrator_main.cpp  stereo_rectifier.cpp  test_calibration.cpp
src/camera/: CMakeLists.txt  camera_factory.cpp  chusei_camera.cpp  mock_camera.cpp
src/census/: CMakeLists.txt  census_transform.cpp  census_transform_cpu.cpp  census_transform_gpu.cpp  filters.cpp
src/census/shaders/: census.comp
src/cpu_stereo/: CMakeLists.txt  cpu_stereo_matcher.cpp
src/inference/: CMakeLists.txt  test_inference_main.cpp  yolo_detector.cpp
src/network/: CMakeLists.txt  udp_streamer.cpp
src/preprocess/: CMakeLists.txt  census.cpp  denoiser.cpp  gpu_bilateral.cpp  gpu_census.cpp  preprocess.cpp  preprocess_cpu.cpp  preprocess_gpu.cpp
src/preprocess/shaders/: bilateral.comp  census_adaptive.comp  rank_transform.comp
src/utils/: CMakeLists.txt  config.cpp  hardware_monitor.cpp  logger.cpp
tools/: chusei_cam_init.sh  split_stereo_images.sh
